--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Computer Science Student</title>
+    <title>Yueyi He | Computer Science Student</title>
     <style>
-        /* 基础样式（可保存为单独的 style.css 文件） */
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
@@ -30,6 +29,7 @@
             object-fit: cover;
             border: 3px solid #fff;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #e0e0e0; /* 头像背景色（图片加载前的占位） */
         }
         h1 {
             margin: 10px 0 5px;
@@ -75,10 +75,10 @@
 <body>
     <div class="container">
         <header>
-            <!-- 替换为你的头像（可删除或替换为占位图） -->
-            <img src="images/avatar.jpg" alt="Your Name">
-            <h1>Your Name</h1>
-            <p class="subtitle">Computer Science Student at East China Normal University</p>
+            <!-- 默认头像（使用占位图，显示姓名首字母 YH） -->
+            <img src="https://ui-avatars.com/api/?name=Yueyi+He&background=3498db&color=fff&size=150" alt="Yueyi He">
+            <h1>Yueyi He</h1>
+            <p class="subtitle">Student at East China Normal University</p>
             <p>Interests: Computer Vision, NLP, and Large Language Models</p>
         </header>
 
@@ -117,7 +117,7 @@
         <section>
             <h2>Contact</h2>
             <p>
-                Email: <a href="mailto:yourname@stu.ecnu.edu.cn">yourname@stu.ecnu.edu.cn</a><br>
+                Email: <a href="mailto:10225101555@ecnu.edu.cn">10225101555@ecnu.edu.cn</a><br>
                 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a>
             </p>
         </section>
@@ -130,7 +130,7 @@
         </div>
 
         <footer>
-            <p>© 2024 Your Name. Last updated: April 2024.</p>
+            <p>© 2024 Yueyi He. Last updated: April 2024.</p>
         </footer>
     </div>
 </body>
