--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yueyi He | Computer Science Student</title>
+    <title>Yueyi He |  Student</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -79,13 +79,13 @@
             <img src="https://ui-avatars.com/api/?name=Yueyi+He&background=3498db&color=fff&size=150" alt="Yueyi He">
             <h1>Yueyi He</h1>
             <p class="subtitle">Student at East China Normal University</p>
-            <p>Interests: Computer Vision, NLP, and Large Language Models</p>
+            <p>email: 10225101555@stu.ecnu.edu.cn</p>
         </header>
 
         <section>
             <h2>About Me</h2>
             <p>
-                Hello! I'm a computer science student passionate about AI, especially 
+                I'm a software engineering student passionate about AI, especially 
                 <strong>Computer Vision (CV)</strong>, <strong>Natural Language Processing (NLP)</strong>, 
                 and <strong>Large Language Models (LLMs)</strong>. Currently exploring multimodal AI applications.
             </p>
@@ -95,22 +95,14 @@
             <h2>Education</h2>
             <p>
                 <strong>East China Normal University (ECNU)</strong><br>
-                Bachelor/Master in Computer Science | 202X - Present<br>
-                Relevant Courses: Deep Learning, Natural Language Processing, Computer Vision
+                Bachelor/Master in Software Engineering | 2022 - Present<br>
             </p>
         </section>
 
         <section>
             <h2>Projects</h2>
             <div>
-                <h3>Project 1: Image Captioning with Transformers</h3>
-                <p>A model that generates descriptions for images using CNN + Transformer architecture.</p>
-                <a href="https://github.com/yourusername/project1" target="_blank">GitHub Link</a>
-            </div>
-            <div style="margin-top: 15px;">
-                <h3>Project 2: LLM Fine-tuning for QA</h3>
-                <p>Fine-tuned LLaMA-2 on custom dataset for question answering.</p>
-                <a href="https://github.com/yourusername/project2" target="_blank">GitHub Link</a>
+                
             </div>
         </section>
 
@@ -118,7 +110,7 @@
             <h2>Contact</h2>
             <p>
                 Email: <a href="mailto:10225101555@ecnu.edu.cn">10225101555@ecnu.edu.cn</a><br>
-                GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a>
+                GitHub: <a href="https://github.com/asterquos" target="_blank">github.com/yourusername</a>
             </p>
         </section>
 
