--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Education</h2>
             <p>
                 <strong>East China Normal University (ECNU)</strong><br>
-                Bachelor/Master in Software Engineering | 2022 - Present<br>
+                Bachelor in Software Engineering | 2022 - Present<br>
             </p>
         </section>
 
@@ -122,7 +122,7 @@
         </div>
 
         <footer>
-            <p>© 2024 Yueyi He. Last updated: April 2024.</p>
+            <p>© 2025 Yueyi He. Last updated: April 2025.</p>
         </footer>
     </div>
 </body>
